--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
-		"sequelize": "^6.19.0"
+		"sequelize": "^6.19.0",
+		"mysql2": "^2.3.3"
 	},
 	"name": "lavieapi",
 	"version": "1.0.0",
