--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
-		"sequelize": "^6.19.0",
-		"mysql2": "^2.3.3"
+		"express-jwt": "^7.6.2",
+		"express-validation": "^4.1.0",
+		"jsonwebtoken": "^8.5.1",
+		"mysql2": "^2.3.3",
+		"sequelize": "^6.19.0"
 	},
 	"name": "lavieapi",
 	"version": "1.0.0",
 	"description": "HandsOn 3 - Gama XP 42 - Grupo 13",
 	"main": "index.js",
-	"devDependencies": {},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon src/index.js"
+		"start": "node src/index.js",
+		"dev": "nodemon src/index.js"
 	},
 	"repository": {
 		"type": "git",
@@ -26,5 +30,10 @@
 	"bugs": {
 		"url": "https://github.com/carreirodev/lavieAPI/issues"
 	},
-	"homepage": "https://github.com/carreirodev/lavieAPI#readme"
+	"homepage": "https://github.com/carreirodev/lavieAPI#readme",
+	"devDependencies": {
+		"install": "^0.13.0",
+		"nodemon": "^2.0.16",
+		"npm": "^8.8.0"
+	}
 }
