--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
-		"sequelize": "^6.19.0",
-		"mysql2": "^2.3.3"
+		"mysql2": "^2.3.3",
+		"nodemon": "^2.0.16",
+		"sequelize": "^6.19.0"
 	},
 	"name": "lavieapi",
 	"version": "1.0.0",
 	"description": "HandsOn 3 - Gama XP 42 - Grupo 13",
 	"main": "index.js",
-	"devDependencies": {},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "nodemon src/index.js"
